[ci] aggregates
